<?xml version="1.0" encoding="utf-8"?>

<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="title_activity_home">SOS flooding</string>
    <string name="title_activity_sos">Emergency call</string>
    <string name="title_activity_language">Language</string>
    <string name="title_activity_about">Floods in Liberec region</string>
    <string name="title_activity_maps">Maps</string>

    <string name="current_language">Current language:</string>
    <string name="change_language">Change language</string>
    <string name="sos_call">Call</string>
    <string name="sos_call_number">1188</string>
    <string name="sos_free_call_number">Free call</string>
    <string name="sos_press">Press</string>
    <string name="hydrology">Hydrology of Liberec region</string>
    <string name="risk_objects">Risk objects</string>
    <string name="flooding_zones">Important places during the flood</string>
    <string name="road_information">Road information</string>
    <string name="select_layers">Select map</string>
    <string name="layer_not_loaded">Layer wasn\'t loaded</string>

    <string name="title_activity_change_news_options">News</string>
    <string name="change_news_options">Change news options</string>
    <string name="current_news_option">News for last:</string>
    <string name="day">1 day</string>
    <string name="week">1 week</string>
    <string name="month">1 month</string>
    <string name="year">1 year</string>
    <string name="all">all</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="connection_issue">Connection error</string>

    <string name="about_flooding">About floodings</string>
    <string name="information_about_flooding">Information, history, FAQ</string>
    <string name="maps">Maps</string>
    <string name="maps_weather_floods_acidents">Weather, floods, accidents</string>
    <string name="news">News</string>
    <string name="police_fire_medic">Emergency services</string>
    <string name="legend_is_not_available">Legend is not available</string>
</resources>