<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context="eu.opentransportnet.sosflooding.activities.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C00066ff">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tool_bar"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.33"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/maps"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/home_button_bg"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/home_maps"/>

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="10dp"
                            android:text="@string/maps"
                            android:textAllCaps="true"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:id="@+id/maps_home_activity" />

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:gravity="bottom"
                            android:text="@string/maps_weather_floods_acidents"
                            android:textSize="10dp"
                            android:id="@+id/weather_floods_acidents_home_activity"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/about"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/home_button_bg"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/home_about"/>

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingTop="10dp"
                            android:text="@string/about_flooding"
                            android:textAllCaps="true"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:id="@+id/about_flooding_home_activity" />

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:gravity="bottom"
                            android:text="@string/information_about_flooding"
                            android:textSize="10dp"
                            android:id="@+id/information_about_flooding_home_activity" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.33"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/alerts"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/home_button_bg"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/home_alerts"/>

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="10dp"
                            android:text="@string/news"
                            android:textAllCaps="true"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:id="@+id/news_home_activity" />

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:gravity="bottom"
                            android:text="@string/police_fire_medic"
                            android:textSize="10dp"
                            android:id="@+id/police_etc_home_activity" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <LinearLayout
                        android:id="@+id/municipal"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/home_button_bg"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/home_municipal"/>

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingTop="10dp"
                            android:text="municipal services"
                            android:textAllCaps="true"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:gravity="bottom"
                            android:text="Police, Firemans, Medicine"
                            android:textSize="10dp"/>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.33"
                android:orientation="horizontal"
                android:weightSum="1"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/volunteers"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/home_button_bg"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/home_volunteers"/>

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="10dp"
                            android:text="voluntiers"
                            android:textAllCaps="true"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:gravity="bottom"
                            android:text="Police, Firemans, Medicine"
                            android:textSize="10dp"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/issue"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/home_button_bg"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/home_issue"/>

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingTop="10dp"
                            android:text="Report an issue"
                            android:textAllCaps="true"
                            android:textSize="14dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:gravity="bottom"
                            android:text="Flooding, accident, disaster"
                            android:textSize="10dp"/>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:id="@+id/progress"
        android:visibility="gone"
        android:background="@color/black_translucent" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/color_primary"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/version"
                android:textColor="#000"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="right" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <ImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:paddingBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"
                    android:scaleType="fitXY"/>

                <TextView
                    android:id="@+id/display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:textColor="@color/white"
                    android:textSize="17dp"/>

                <ListView
                    android:id="@+id/drawerlist"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/white"
                    android:cacheColorHint="@color/text_secondary"
                    android:textColor="@color/text_secondary"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>